examples/failing/NullaryAbs.purs
module Main where

import Prelude

func = \ -> "no"
